Fix compilation warnings.
Use Number.valueOf() instead of constructors